--- a/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/SelectionCellDemo.xaml
@@ -35,7 +35,7 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <Border Background="{StaticResource 主题蓝色}" Height="50" Width="50" VerticalAlignment="Center">
+                                <Border Background="{StaticResource 主蓝}" Height="50" Width="50" VerticalAlignment="Center">
                                     <TextBlock Text="&#xE060;"
                                                FontFamily="{StaticResource IconFont}"
                                                FontSize="30"
