--- a/Client/Dt.App/Home/GroupMenu.xaml
+++ b/Client/Dt.App/Home/GroupMenu.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Border BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰边框}" Height="{StaticResource RowOuterHeight}">
+        <Border BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰2}" Height="{StaticResource RowOuterHeight}">
             <TextBlock x:Name="_tb" VerticalAlignment="Center" Margin="20,0,20,0" />
         </Border>
 
@@ -23,7 +23,7 @@
             <DataTemplate>
                 <Grid Padding="12">
                     <StackPanel VerticalAlignment="Center">
-                        <a:Dot ID="Icon" UI="Icon" FontSize="30" Foreground="{StaticResource 主题蓝色}" Margin="0,0,0,4" HorizontalAlignment="Center" />
+                        <a:Dot ID="Icon" UI="Icon" FontSize="30" Foreground="{StaticResource 主蓝}" Margin="0,0,0,4" HorizontalAlignment="Center" />
                         <a:Dot ID="Name" HorizontalAlignment="Center" />
                     </StackPanel>
                 </Grid>
