--- a/Client/Dt.App/Home/MyMain.xaml
+++ b/Client/Dt.App/Home/MyMain.xaml
@@ -16,9 +16,9 @@
                 <Image x:Name="_img" Width="50" Height="50" Margin="0,0,20,0" />
                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                     <TextBlock x:Name="_tbName" FontSize="{StaticResource 标题字}" />
-                    <TextBlock x:Name="_tbPhone" Foreground="{StaticResource 深灰边框}" />
+                    <TextBlock x:Name="_tbPhone" Foreground="{StaticResource 深灰2}" />
                 </StackPanel>
-                <TextBlock Text="编辑" Foreground="{StaticResource 深灰边框}" VerticalAlignment="Center" Grid.Column="2" />
+                <TextBlock Text="编辑" Foreground="{StaticResource 深灰2}" VerticalAlignment="Center" Grid.Column="2" />
             </Grid>
         </a:CLink>
         <a:CBar />
