--- a/Client/Dt.Base/Report/Design/ParamsWin.xaml
+++ b/Client/Dt.Base/Report/Design/ParamsWin.xaml
@@ -53,7 +53,7 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-                            <Grid Background="{StaticResource 浅灰背景}" BorderBrush="{StaticResource 浅灰边框}" BorderThickness="0,0,1,1" Height="40">
+                            <Grid Background="{StaticResource 浅灰1}" BorderBrush="{StaticResource 浅灰2}" BorderThickness="0,0,1,1" Height="40">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="150" />
                                     <ColumnDefinition Width="*" />
