--- a/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
+++ b/Client/Dt.Base/Structure/ModuleView/NavList/NavList.xaml
@@ -15,7 +15,7 @@
                 <a:Dot ID="Icon"
                        FontSize="30"
                        Margin="0,0,10,0"
-                       Foreground="{StaticResource 主题蓝色}"
+                       Foreground="{StaticResource 主蓝}"
                        VerticalAlignment="Center" />
                 <StackPanel VerticalAlignment="Center" Grid.Column="1">
                     <a:Dot ID="Title" />
@@ -30,7 +30,7 @@
                 <StackPanel VerticalAlignment="Center">
                     <a:Dot ID="Icon"
                            FontSize="30"
-                           Foreground="{StaticResource 主题蓝色}"
+                           Foreground="{StaticResource 主蓝}"
                            Margin="0,0,0,4"
                            HorizontalAlignment="Center" />
                     <a:Dot ID="Title" HorizontalAlignment="Center" />
