--- a/Client/Dt.Base/Structure/Tools/SysTrace.xaml
+++ b/Client/Dt.Base/Structure/Tools/SysTrace.xaml
@@ -23,11 +23,11 @@
                 </Grid.RowDefinitions>
                 <a:Dot ID="servicename" Font="小灰" />
                 <a:Dot ID="time" Font="小灰" HorizontalAlignment="Right"/>
-                <Border Background="{StaticResource 主题蓝色}" BorderThickness="0" Padding="10,6" Grid.Row="1">
+                <Border Background="{StaticResource 主蓝}" BorderThickness="0" Padding="10,6" Grid.Row="1">
                     <a:Dot ID="title" Foreground="White" />
                 </Border>
                 <Path Data="M0,0 L16,0 L20,8"
-                      Fill="{StaticResource 主题蓝色}"
+                      Fill="{StaticResource 主蓝}"
                       StrokeThickness="0"
                       Stretch="Fill"
                       Width="20"
@@ -48,7 +48,7 @@
                 </Grid.RowDefinitions>
                 <a:Dot ID="servicename" Font="小灰" />
                 <Path Data="M0,0 L4,8 L20,8"
-                      Fill="{StaticResource 绿色背景}"
+                      Fill="{StaticResource 中绿}"
                       StrokeThickness="0"
                       Stretch="Fill"
                       Width="20"
@@ -57,7 +57,7 @@
                       HorizontalAlignment="Left"
                       VerticalAlignment="Bottom"
                       Grid.Row="1"/>
-                <Border Background="{StaticResource 绿色背景}" BorderThickness="0" Padding="10,6" Grid.Row="2">
+                <Border Background="{StaticResource 中绿}" BorderThickness="0" Padding="10,6" Grid.Row="2">
                     <a:Dot ID="title" Foreground="White" />
                 </Border>
                 <a:Dot ID="time" Font="小灰" Grid.Row="3"/>
@@ -89,8 +89,8 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <a:Lv x:Name="_lv" ShowItemBorder="False" AutoScrollBottom="True" />
-                    <Grid Background="{StaticResource 浅灰背景}"
-                          BorderBrush="{StaticResource 浅灰边框}"
+                    <Grid Background="{StaticResource 浅灰1}"
+                          BorderBrush="{StaticResource 浅灰2}"
                           BorderThickness="1"
                           Margin="0,0,-1,0"
                           Grid.Row="1">
