--- a/Client/Dt.Base/Themes/Styles/ListView.xaml
+++ b/Client/Dt.Base/Themes/Styles/ListView.xaml
@@ -31,8 +31,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="lv:ColHeaderCell">
                     <Border x:Name="Root"
-                            Background="{StaticResource 浅灰背景}"
-                            BorderBrush="{StaticResource 浅灰边框}"
+                            Background="{StaticResource 浅灰1}"
+                            BorderBrush="{StaticResource 浅灰2}"
                             BorderThickness="0,0,1,1">
                         <StackPanel Orientation="Horizontal" Margin="10,0,10,0">
                             <TextBlock Text="{TemplateBinding Title}" VerticalAlignment="Center" />
@@ -47,12 +47,12 @@
                                 <VisualState x:Name="Normal"/>
                                 <VisualState x:Name="PointerOver">
                                     <VisualState.Setters>
-                                        <Setter Target="Root.Background" Value="{StaticResource 浅黄背景}" />
+                                        <Setter Target="Root.Background" Value="{StaticResource 浅黄}" />
                                     </VisualState.Setters>
                                 </VisualState>
                                 <VisualState x:Name="Pressed">
                                     <VisualState.Setters>
-                                        <Setter Target="Root.Background" Value="{StaticResource 黄色背景}" />
+                                        <Setter Target="Root.Background" Value="{StaticResource 中黄}" />
                                     </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
@@ -88,8 +88,8 @@
                                 </VisualState>
                                 <VisualState x:Name="Selected">
                                     <VisualState.Setters>
-                                        <Setter Target="ElementTitle.Foreground" Value="{StaticResource 主题蓝色}" />
-                                        <Setter Target="LineRect.Fill" Value="{StaticResource 主题蓝色}" />
+                                        <Setter Target="ElementTitle.Foreground" Value="{StaticResource 主蓝}" />
+                                        <Setter Target="LineRect.Fill" Value="{StaticResource 主蓝}" />
                                     </VisualState.Setters>
                                 </VisualState>
                             </VisualStateGroup>
@@ -106,9 +106,9 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="lv:GroupRow">
-                    <StackPanel BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰边框}" Background="Transparent">
+                    <StackPanel BorderThickness="0,0,0,1" BorderBrush="{StaticResource 浅灰2}" Background="Transparent">
                         <Rectangle x:Name="Rect"
-                                   Fill="{StaticResource 浅灰边框}"
+                                   Fill="{StaticResource 浅灰2}"
                                    Height="6"
                                    Margin="0,10,0,0"
                                    IsHitTestVisible="False" />
