--- a/Client/Dt.Base/Themes/Styles/Menu.xaml
+++ b/Client/Dt.Base/Themes/Styles/Menu.xaml
@@ -145,7 +145,7 @@
                                Width="1"
                                Height="20"
                                Margin="4,0,4,0"
-                               Fill="{StaticResource 灰色边框}"
+                               Fill="{StaticResource 中灰2}"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Stretch">
                         
