--- a/Client/Dt.Sample/Base/GuideDemo.xaml
+++ b/Client/Dt.Sample/Base/GuideDemo.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Background="{StaticResource 主题蓝色}">
+    Background="{StaticResource 主蓝}">
 
     <Grid>
         <Grid.RowDefinitions>
