--- a/Client/Dt.Sample/Styles/FontDemo.xaml
+++ b/Client/Dt.Sample/Styles/FontDemo.xaml
@@ -17,7 +17,7 @@
             <TextBlock Text="标题字：20px，小三，窗口页面标题用" FontSize="{StaticResource 标题字}" />
             <TextBlock Text="默认字：16px，小四，xaml中不需要指定FontSize" />
             <TextBlock Text="小字：14px，五号，说明性文字用" FontSize="{StaticResource 小字}" />
-            <TextBlock Text="小灰：深灰边框14px，常用文字样式" Style="{StaticResource 小灰}" />
+            <TextBlock Text="小灰：深灰214px，常用文字样式" Style="{StaticResource 小灰}" />
             
             <TextBlock Text="不常用" Margin="0,20,0,0" />
             <TextBlock Text="特小字：12px，小五，辅助说明文字用" FontSize="{StaticResource 特小字}" />
