--- a/Client/Dt.Sample/Styles/IconDemo.xaml
+++ b/Client/Dt.Sample/Styles/IconDemo.xaml
@@ -10,7 +10,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <a:SearchBox x:Name="_sb" Search="OnSearch" Placeholder="请输入名称或简码" IsRealtime="True" />
-        <a:Lv x:Name="_lv" ViewMode="Tile" BorderThickness="1,0,1,0" BorderBrush="{StaticResource 浅灰边框}" Grid.Row="1">
+        <a:Lv x:Name="_lv" ViewMode="Tile" BorderThickness="1,0,1,0" BorderBrush="{StaticResource 浅灰2}" Grid.Row="1">
             <a:Ex.Menu>
                 <a:Menu>
                     <a:Mi ID="复制Icons值" Icon="地址" Click="OnCopyIcons" />
