--- a/Client/Dt.Sample/FormView/BaseCellDemo.xaml
+++ b/Client/Dt.Sample/FormView/BaseCellDemo.xaml
@@ -10,7 +10,7 @@
                 <a:Fv x:Name="_fv">
                     <a:CBar Title="基本格" />
                     <a:CText ID="txt" Title="文本框" Placeholder="文本框" />
-                    <a:CText ID="txtinput" Title="控制输入法" InputScope="NumberFullWidth" />
+                    <a:CText ID="txtinput" Title="控制输入法" InputScope="Number" />
                     <a:CText ID="txtlong" Title="长文本" AcceptsReturn="True" RowSpan="2" UpdateTimely="False" />
                     <a:CText ID="txtpy" Title="拼音码" UpdateTimely="False" Changed="OnPyChanged" />
                     <a:CText ID="tgtpy" Title="输出拼音码" IsReadOnly="True" />
